[package]
name = "hibitgraph"
version = "0.1.0"
authors = ["Johannes Meintrup <johannes.meintrup@mni.thm.de>"]
edition = "2018"
categories = ["data-structures"]
description = "Bitset based graph data structure"
documentation = "https://docs.rs/bitgraph"
keywords = ["bitset", "container", "data-structures", "graph", "network"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jmeintrup/bitgraph"

[dependencies]
hibitset = "0.6"
bit-set = "0.4.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false